--- a/data_explore.Rmd
+++ b/data_explore.Rmd
@@ -497,23 +497,14 @@ spp_list <- spp_list %>%
          area_ratio = ifelse(area_ratio > 1, 1 / area_ratio, area_ratio),
          area_ratio = area_ratio * 100)
 
-### Inspect each quadrant to find representative species
-# quadrant1_spp <- spp_list %>%
-#   filter(area_ratio > 90 & sm_perc > 90)
-# quadrant2_spp <- spp_list %>%
-#   filter(area_ratio > 25 & area_ratio < 30) %>%
-#   filter(sm_perc > 90)
-# quadrant4_spp <- spp_list %>%
-#   filter(sm_perc > 25 & sm_perc < 30) %>%
-#   filter(area_ratio > 90)
-# quadrant3_spp <- spp_list %>%
-#   filter(area_ratio < 25 & sm_perc < 25)
+area_ratio_quartiles <- quantile(spp_list$area_ratio, na.rm = TRUE)[2:4]
+pct_overlap_quartiles <- quantile(spp_list$sm_perc, na.rm = TRUE)[2:4]
 
 spp_quads <- c('q1' = 'Kajikia albida', 
                'q2' = 'Galaxea cryptoramosa', 
-               'q3' = 'Acanthurus nigroris', 
-               'q3a' = 'Metanephrops australiensis', 
-               'q4' = 'Conus magnificus')
+               'q4' = 'Acanthurus nigroris', 
+               'q4a' = 'Metanephrops australiensis', 
+               'q3' = 'Conus magnificus')
 
 spp_list_label <- spp_list %>%
   filter(sciname %in% spp_quads) %>%
@@ -521,15 +512,19 @@ spp_list_label <- spp_list %>%
   mutate(sciname_label = paste(str_sub(g, 1, 1), '. ', s, sep = '')) %>%
   select(-g, -s)
 
-scatter_arearatio_vs_overlap <- ggplot(spp_list, aes(area_ratio, sm_perc, color = sm_range)) + 
+scatter_arearatio_vs_overlap <- ggplot(spp_list, aes(x = area_ratio, y = sm_perc, color = log_total_area)) + 
   ggtheme_plot + 
   geom_point() + 
   geom_abline() + 
-  geom_point(data = spp_list_label, color = 'grey30') + 
+  geom_vline(x = area_ratio_quartiles,
+             color = 'grey50', linetype = 'dashed') +
+  geom_hline(y = pct_overlap_quartiles,
+             color = 'grey50', linetype = 'dashed') +
+  geom_point(data = spp_list_label, color = 'tomato2') + 
   geom_text(data = spp_list_label, 
             aes(label = sciname_label), 
-            color = 'grey30',
-            fontface = 3,
+            color = 'tomato2',
+            fontface = 'bold.italic',
             size = 2,
             hjust = .25,
             vjust = 1.5) +
@@ -541,8 +536,88 @@ ggsave('figures/AreaRatiovsPercOverlap.png', width = 6, height = 4)
 
 print(scatter_arearatio_vs_overlap)
 
+scatter_arearatio_vs_overlap2 <- ggplot(spp_list, aes(x = area_ratio, y = sm_perc, color = sm_range)) + 
+  ggtheme_plot + 
+  geom_point() + 
+  geom_abline() + 
+  geom_vline(x = area_ratio_quartiles,
+             color = 'grey50', linetype = 'dashed') +
+  geom_hline(y = pct_overlap_quartiles,
+             color = 'grey50', linetype = 'dashed') +
+  geom_point(data = spp_list_label, color = 'grey30') + 
+  geom_text(data = spp_list_label, 
+            aes(label = sciname_label), 
+            color = 'grey30',
+            fontface = 'bold.italic',
+            size = 2,
+            hjust = .25,
+            vjust = 1.5) +
+  labs(x = 'Range area ratio (smaller:larger) * 100%', 
+       y = 'Percent overlap smaller range in larger', 
+       title = 'Ratio of species range vs. percent overlap of \nsmaller range with larger')
+
+ggsave('figures/AreaRatiovsPercOverlap2.png', width = 6, height = 4)
+
+print(scatter_arearatio_vs_overlap2)
+
+
 ```
 
+``` {r examine_spp_gp_quartiles}
+
+spp_list1 <- spp_list %>%
+  group_by(spp_group) %>%
+  mutate(n_spp = n()) %>%
+  ungroup()
+
+spp_gp_q1 <- spp_list1 %>%
+  filter(area_ratio >= median(area_ratio, na.rm = TRUE) & sm_perc >= median(sm_perc, na.rm = TRUE)) %>%
+  group_by(spp_group) %>%
+  summarize(n_spp = first(n_spp),
+            n_spp_q1 = n())
+spp_gp_q2 <- spp_list1 %>%
+  filter(area_ratio < median(area_ratio, na.rm = TRUE) & sm_perc >= median(sm_perc, na.rm = TRUE)) %>%
+  group_by(spp_group) %>%
+  summarize(n_spp = first(n_spp),
+            n_spp_q2 = n())
+spp_gp_q4 <- spp_list1 %>%
+  filter(area_ratio < median(area_ratio, na.rm = TRUE) & sm_perc < median(sm_perc, na.rm = TRUE)) %>%
+  group_by(spp_group) %>%
+  summarize(n_spp = first(n_spp),
+            n_spp_q4 = n())
+spp_gp_q3 <- spp_list1 %>%
+  filter(area_ratio >= median(area_ratio, na.rm = TRUE) & sm_perc < median(sm_perc, na.rm = TRUE)) %>%
+  group_by(spp_group) %>%
+  summarize(n_spp = first(n_spp),
+            n_spp_q3 = n())
+
+spp_gp_quadrants <- spp_gp_q1 %>%
+  left_join(spp_gp_q2, by = c('spp_group', 'n_spp')) %>%
+  left_join(spp_gp_q3, by = c('spp_group', 'n_spp')) %>%
+  left_join(spp_gp_q4, by = c('spp_group', 'n_spp')) %>%
+  gather(quad, n_quad, n_spp_q1, n_spp_q2, n_spp_q3, n_spp_q4) %>% 
+  mutate(quad = str_replace(quad, 'n_spp_', ''),
+         pct_quad = n_quad/n_spp)
+
+spp_gp_quadrants <- spp_gp_quadrants %>%
+  left_join(spp_gp_quadrants %>% 
+              filter(quad == 'q1') %>%
+              select(spp_group, pct_q1 = pct_quad),
+            by = 'spp_group')
+
+barchart_spp_gp_quads <- ggplot(spp_gp_quadrants %>% 
+                                  transform(spp_group = reorder(spp_group, pct_q1)), 
+                                aes(x = spp_group, fill = quad, weight = pct_quad)) +
+  ggtheme_plot + 
+  geom_bar(stat = 'bin') +
+  geom_text(aes(label = sprintf('n = %s', n_spp), y = .05), hjust = 0) +
+  coord_flip() +
+  labs(x = 'Species Group', 
+       y = 'Relative number of species per quadrant', 
+       title = 'Species group breakdown by quadrant')
+
+
+```
 
 ```{r plot_spp_from_quadrants, echo = FALSE, warning = FALSE, message = FALSE}
 
@@ -731,12 +806,14 @@ spp_cells <- as.data.frame(spp_cells)
 
 spp <- fread(input = file.path(dir_aquamaps, 'tables/ohi_speciesoccursum.csv'), 
              verbose = FALSE, header = TRUE) %>%
-  mutate(sciname = paste(Genus, Species, sep = ' '))
+  mutate(sciname = paste(Genus, Species, sep = ' '),
+         iucn_code = str_replace(toupper(iucn_code), 'LR/', ''),
+         iucn_code = str_replace(iucn_code, 'N.E.', 'NE'))
 spp <- as.data.frame(spp)
 
 ```
 
-```{r, warning = FALSE, message = FALSE, echo = FALSE}
+```{r hist_lost_area_w_threshold, warning = FALSE, message = FALSE, echo = FALSE}
 
 ### create dataframe that gives me all species, their total number of cells, 
 ### total number of cells >= 0.4 prob, difference between the two and threat
@@ -745,18 +822,68 @@ spp_df3 <- spp_cells %>%
   summarize(cells_0.4 = sum(probability >= 0.4),
             cells_t = sum(probability >= 0)) %>%
   mutate(prop = cells_0.4 / cells_t) %>%
-  left_join(spp, by = c('species_id' = 'SPECIESID')) %>%
+  left_join(spp %>%
+#              filter(toupper(iucn_code) %in% c('LC', 'NT', 'VU', 'EN', 'CR', 'EX', 'DD', 'NE')), 
+              filter(toupper(iucn_code) %in% c('LC', 'NT', 'VU', 'EN', 'CR', 'EX')), 
+            by = c('species_id' = 'SPECIESID')) %>%
   select(sciname, species_id, cells_0.4, cells_t, prop, iucn_code)
 
 
 hist_area_vs_threshold <- ggplot(spp_df3, aes(prop, fill = iucn_code)) + 
   ggtheme_plot + 
   geom_histogram(aes(y = ..count../sum(..count..)), binwidth = 0.05, alpha = .7) + 
-  labs(x = 'Proportion of range area included when selecting a threshold of 0.4', y = 'Proportion of all aquamaps species (17,348 total)')
+  labs(x = 'Proportion of range area included when selecting a threshold of 0.4', 
+       y = 'Proportion of all aquamaps species (17,348 total)')
 
 ggsave('figures/AMThreshold.png', width = 6, height = 4)
 
 print(hist_area_vs_threshold)
+
+```
+
+```{r scatter_lost_area_w_threshold, warning = FALSE, message = FALSE, echo = FALSE}
+
+### create dataframe that gives me all species, their total number of cells, 
+### total number of cells >= 0.4 prob, difference between the two and threat
+
+threshold_df <- data.frame()
+for (i in seq(0, 1, .05)) { # i = .05
+  temp_df <- spp_cells %>%
+    group_by(species_id) %>%
+    summarize(thresh       = i,
+              cells_thresh = sum(probability >= thresh),
+              cells_total  = sum(probability >= 0),
+              proportion   = cells_thresh/cells_total) %>%
+    left_join(spp %>%
+#              filter(toupper(iucn_code) %in% c('LC', 'NT', 'VU', 'EN', 'CR', 'EX', 'DD', 'NE')), 
+              filter(toupper(iucn_code) %in% c('LC', 'NT', 'VU', 'EN', 'CR', 'EX')), 
+            by = c('species_id' = 'SPECIESID')) %>%
+    select(sciname, species_id, thresh, cells_thresh, cells_total, proportion, iucn_code)
+  
+  threshold_df <- threshold_df %>%
+    bind_rows(temp_df)
+}
+
+thresh_df_summary <- threshold_df %>%
+  group_by(thresh) %>%
+  summarize(mean_prop   = mean(proportion, na.rm = TRUE),
+            median_prop = median(proportion, na.rm = TRUE))
+
+scatter_area_vs_threshold <- ggplot(thresh_df_summary, aes(x = thresh, y = mean_prop)) + 
+  ggtheme_plot + 
+  geom_point(aes(y = median_prop), color = 'grey60') +
+  geom_point() + 
+  geom_abline(slope = -1, intercept = 1, color = 'red') + 
+  geom_vline(x = 0.40, color = 'blue', linetype = 'dashed') +
+  ylim(0, 1) +
+  labs(title = 'Mean (median) species range after presence threshold cutoff',
+       x = 'Presence threshold cutoff', 
+       y = 'Mean (median) relative species range')
+
+ggsave('figures/scatter_AMThreshold.png', width = 6, height = 4)
+
+print(scatter_area_vs_threshold)
+
 
 ```
 
